spec/error_if_with_do.expected
spec/error_if_with_do.kex:3:11: error: use 'then' instead of 'do' in if expression: `if cond then body end`
Aborted: fix syntax errors before running.
