spec/error_if_with_do.kex
# `if` no longer takes a `do` тАФ the old syntax fails to parse.
main do
  if true do
    IO.printLine("x")
  end
end
